make the user button smaller to prevent unintentional clicks

--- a/src/style/post.css
+++ b/src/style/post.css
@@ -151,6 +151,7 @@
   display: flex;
   /* justify-content: center; */
   align-items: center;
+  align-self: flex-start;
 }
 .userCard a {
   margin-left: 10px;
